--- a/app/resources/css/map.css
+++ b/app/resources/css/map.css
@@ -7,3 +7,47 @@ body {
     height: 100%;
     width: 100%;
 }
+
+.popup_message {
+    display: block;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.9);
+    color: #fff;
+    border-radius: 10px;
+    min-width: 350px;
+
+    transition: opacity 1s;
+    opacity: 0;
+    overflow: hidden;
+}
+
+.popup_message__title {
+    padding: 10px;
+    border-bottom: solid 1px rgb(70, 70, 70);
+}
+
+.popup_message__actions {
+    display: flex;
+    flex-direction: column;
+}
+
+.popup_message__actions:hover span {
+    filter: blur(1.2px);
+}
+
+.popup_message__actions span {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    min-height: 25px;
+    transition: filter 0.5s ease-out;
+}
+
+.popup_message__actions span:hover {
+    background-color: #fdf7c5;
+    color: #000;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+    cursor: pointer;
+    filter: blur(0px)!important;
+    transition: filter 0.2s ease-out;
+}
