--- a/app/resources/css/map.css
+++ b/app/resources/css/map.css
@@ -13,8 +13,10 @@ body {
     position: absolute;
     background: rgba(0, 0, 0, 0.9);
     color: #fff;
-    border-radius: 10px;
-    min-width: 350px;
+    border-radius: 7px;
+
+    min-width: 100px;
+    min-height: 60px;
 
     transition: opacity 1s;
     opacity: 0;
@@ -22,8 +24,9 @@ body {
 }
 
 .popup_message__title {
-    padding: 10px;
     border-bottom: solid 1px rgb(70, 70, 70);
+    padding: 15px 10px 17px;
+    margin: 0;
 }
 
 .popup_message__actions {
@@ -44,9 +47,9 @@ body {
 }
 
 .popup_message__actions span:hover {
-    background-color: #fdf7c5;
+    background-color: #e1b766;
     color: #000;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+    box-shadow: 0 0 7px rgba(225, 183, 102, 0.6);
     cursor: pointer;
     filter: blur(0px)!important;
     transition: filter 0.2s ease-out;
