--- a/app/resources/css/map.css
+++ b/app/resources/css/map.css
@@ -36,8 +36,8 @@ body {
     .popup_message {
         top: 0!important;
         left: 0!important;
-        width: 100vw!important;
-        height: 100vh!important;
+        width: 100%!important;
+        height: 100%!important;
     }
 }
 
